# family-meal-support

./: .env.example  .gitignore  README.md  pyproject.toml  setup-oauth.py
src/: __init__.py
src/commands/: addmeal.py  addmeal_discord.py  daily_brief.py  doneshopping.py  email.py  grocery.py  mealplan.py  pantry_review.py  pending_discovery.py  sync.py  tonight.py
src/grocery/: __init__.py  generate.py
src/meal_plan/: __init__.py  _sync.py  plan.py
src/obsidian/: __init__.py  recipe_saver.py  recipes.py  vault.py
src/pantry/: _categorize.py  _photo.py  inventory.py
src/recipes/: __init__.py  discovery.py  lookup.py
src/shared/: __init__.py  errors.py  types.py
src/sheets/: __init__.py  auth.py  client.py
tests/: conftest.py  test_mealplan.py  test_tonight.py
tests/commands/: test_addmeal.py  test_addmeal_parse.py  test_daily_brief.py  test_doneshopping.py  test_email.py  test_grocery.py  test_pantry_review.py  test_pending_discovery.py
tests/grocery/: test_generate.py
tests/meal_plan/: test_sync.py
tests/obsidian/: test_recipe_saver.py  test_vault.py  test_vault_update_link.py  test_vault_write.py
tests/pantry/: test_photo.py
tests/recipes/: test_discovery.py  test_lookup.py
tests/sheets/: test_client.py
