[project]
name = "family-meal-support"
version = "0.1.0"
description = "Meal planning, grocery lists, pantry management, and recipe discovery for the Beck household."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "mypy>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",           # docstring conventions (enforced elsewhere)
    "PTH",         # use pathlib
    "RET505",      # unnecessary else after return
    "EM",          # emoticons in comments
]

[tool.mypy]
python_version = "3.11"
strict = true
